# ZsxqCrawler

./: .gitignore  LICENSE  MIGRATION_COMPLETE.md  README.md  account_info_db.py  accounts.json  accounts_manager.py  accounts_sql_manager.py  auth.db-shm  auth.db-wal  auth_server.py  db_path_manager.py  image_cache_manager.py  logger_config.py  main.py  migrate_accounts_to_sql.py  pyproject copy.toml  pyproject.toml  wecom_webhook copy.py  wecom_webhook.py  zsxq_columns_database.py  zsxq_database.py  zsxq_file_database.py  zsxq_file_downloader.py  zsxq_interactive_crawler copy.py  zsxq_interactive_crawler.py
frontend/: package-lock.json  package.json
frontend - 副本/: next.config.ts
frontend - 副本/src/app/: globals.css  page.tsx
frontend - 副本/src/components/: AccountPanel.tsx  ConfigPanel.tsx  CrawlPanel.tsx  CrawlSettingsDialog.tsx  DownloadSettingsDialog.tsx  FilePanel.tsx  GroupSelector.tsx  ImageGallery.tsx  TaskLogViewer.tsx
frontend - 副本/src/styles/: group-selector.css
frontend-copy/: package-lock.json  package.json
frontend-copy/src/app/: layout.tsx
frontend-copy/src/components/: AuthDialog.tsx  CrawlLatestDialog.tsx  DataPanel.tsx  (+2 more)
frontend-new/: .dockerignore  .env.development  .env.production  Dockerfile.dockerfile  next.config.ts  package-lock.json  package.json  pnpm-workspace.yaml
frontend-new/admin-use/: package-lock.json
frontend-new/client-use/: .env.development  .env.production  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
sync_server/: file_sync.py  incremental_sync.py  rename_pic.py  sync_config.json
(+135 files in other folders)
