[project]
name = "knowledge-planetb"
version = "0.1.0"
description = "知识星球数据爬取和管理工具"
authors = [
    {name = "46", email = ""},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "xhtml2pdf>=0.2.17",
    "pymupdf>=1.23.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

